# gollm

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  Makefile.windows  README.md  REFACTOR.md  REFACTORING_SUMMARY.md  TODO.md  adaptive_timeout_report.md  diagnose_env.py  docker-compose.yml  examples.md  gollm.json  gollm2.json  install.sh  load_config.py  motto.txt  pyproject.toml  pytest.ini  requirements-dev.txt  run_demo.bat  run_demo.sh  setup.py  spyq.json  src.txt  test_basic_functionality.py  test_env.py  test_import.py  test_makefile.sh  test_makefile.yml  test_ollama_generate.py  test_ollama_provider.py  test_providers.py  test_spyq.py
.gollm/: metrics.json
.gollm/hooks/: pre-commit  pre-push
.gollm/templates/: changelog_template.md
.spyq/hooks/: post-commit  pre-commit  pre-push
.spyq/templates/: changelog_template.md  config_template.json  todo_template.md
1-mistral/: README.md
docker/testenv/: Dockerfile
docs/: README.md  REFACTORING.md  api_reference.md  configuration.md  getting_started.md  index.md  iterative_code_completion.md  llm_integration.md  multi_file_generation.md
docs/api/: README.md  cli.md  core.md  extensions.md  reference.md
docs/configuration/: README.md  advanced.md  llm_integration.md  project_management.md  validation_rules.md
docs/development/: contributing.md
docs/examples/: README.md
docs/features/: overview.md  usage.md
docs/getting-started/: installation.md
docs/guides/: README.md  fast_and_direct_modes.md  getting_started.md  multi_file_generation.md  ollama_setup.md  streaming.md
examples/: CHANGELOG.md  TODO.md  bad_code.py  good_code.py  spyq.json
scripts/: init_test_env.sh  install_hooks.py  migrate_config.py  migrate_to_modular.py  move_tests.py  setup_ide.py  update_test_timeouts.py
spyq2/examples/: bad_code.py  good_code.py
spyq2/scripts/: install_hooks.py  migrate_config.py  setup_ide.py
spyq2/tests/: test_llm_orchestrator.py  test_todo_manager.py
src/gollm/: __init__.py  __main__.py  cli.py  exceptions.py  main.py
src/spyq/: __init__.py  __main__.py  cli.py  main.py
test_output/: add_numbers.py  curl_output.json  direct_api_function.txt  gollm_fast_output.txt  gollm_output.txt  results.json
testpro/: CHANGELOG.md  TODO.md  auth.py  gollm.json  spyq.json
testpro/.gollm/: metrics.json
tests/: Makefile  README.md  __init__.py  conftest.py  gollm.json  health_check.sh  run_ansible_tests.sh  test_changelog_manager.py  test_cli.sh  test_config_aggregator.py  test_direct_client.py  test_llm_orchestrator.py  test_simple_prompt.sh  test_validators.py
tests/.gollm/: metrics.json
tests/adapter_tests/: ansible_test.yml  csv_processor.py  direct_modular_test.py  direct_test.py  factorial.py  hello_world.py  minimal_test.py  monitor.sh  sorter.js  standalone_test.py  test_adaptive_timeout.py  test_code_generation.py  test_generator.py  test_minimal.py  test_ollama_improved.py  test_summary_template.j2  timeout_test.py
tests/ansible/: playbook.yml
tests/e2e/: README.md  mock_iterative_completion_test.py  run_code_generation_tests.sh  simple_mock_test.py  test_basic_functionality.py  test_code_generation_run.py  test_direct_api.py  test_fast_mode.py  test_ollama.py  test_ollama_direct.py  test_ollama_e2e.py  test_ollama_integration.py  test_streaming.py
tests/fixtures/: sample_changelog.md  sample_config.json  sample_todo.md
tests/infrastructure/: docker-compose.yml
tests/integration/: test_gollm.py  test_llm_orchestrator.py
tests/llm/: test_iterative_completion.py
tests/unit/: test_changelog_manager.py  test_config_aggregator.py  test_env.py  test_import.py  test_incomplete_detector.py  test_ollama_basic.py  test_ollama_direct.py  test_ollama_extraction.py  test_ollama_final.py  test_providers.py  test_todo_manager.py  test_validation.py  (+1 more)
(+219 files in other folders)
