[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gollm"
version = "0.1.27"
description = "Go Learn, Lead, Master! - Inteligentny system kontroli jakości kodu z integracją LLM"
authors = [
    {name = "Tom Sapletta", email = "info@softreck.dev"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8.1"
keywords = ["code-quality", "linting", "llm", "python", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "psutil>=5.0.0",
    "aiofiles>=0.8.0",
    "pydantic>=1.10.0",
    "aiohttp>=3.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "coverage>=7.0.0"
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.3.0"
]

[project.scripts]
gollm = "gollm.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
